--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+repositories{
+    jcenter();
+}
 
 android {
     compileSdkVersion 21
@@ -23,4 +26,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/RecyclerView.jar')
+    compile 'jp.wasabeef:recyclerview-animators:1.1.3@aar'
 }
