--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-repositories{
-    jcenter();
+repositories {
+    jcenter()
 }
-
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
